# dev_test_qt

./: CMakeLists.txt  README.md  issues.txt  main.cpp  users.txt
domain/: Issue.cpp  Issue.h  User.cpp  User.h
gui/: AbstractModel.cpp  AbstractModel.h  GUI.cpp  GUI.h
observer/: Observer.h
repository/: IssueRepository.cpp  IssueRepository.h  Repository.h  UserRepository.cpp  UserRepository.h
